# harbor

./: .gitattributes  .gitignore  ARCHITECTURE.md  BOOTSTRAP_PROMPT.md  BUILD.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  SECURITY.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml  windows.yml
crates/harbor-core/: Cargo.toml
crates/harbor-core/src/: lib.rs  testing.rs
crates/harbor-core/src/application/: key_service.rs  metrics_service.rs  mod.rs  ports.rs  profile_service.rs  session_service.rs  transfer_service.rs
crates/harbor-core/src/domain/: auth.rs  error.rs  file.rs  host_key.rs  key.rs  metrics.rs  mod.rs  profile.rs  session.rs  transfer.rs
crates/harbor-core/src/infrastructure/: host_key_policy.rs  keychain.rs  keys.rs  known_hosts.rs  mod.rs  paths.rs  sftp.rs  ssh.rs  storage.rs
crates/harbor-core/tests/: integration_app.rs  ssh_e2e.rs
src/: App.tsx  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: app.rs  keys.rs  local_fs.rs  metrics.rs  mod.rs  profiles.rs  security.rs  sessions.rs  sftp.rs  transfers.rs
src/components/: FileBrowser.tsx  HostKeyPromptModal.tsx  Icon.tsx  LockScreen.tsx  MetricsPane.tsx  NavRail.tsx  PinDialogs.tsx  ProfileEditor.tsx  SessionWorkspace.tsx  TerminalPane.tsx  UpdateBanner.tsx  Workspace.tsx  ui.tsx
src/hooks/: useShortcuts.ts  useUpdater.ts
src/lib/: format.ts  native.ts
src/pages/: ConnectionsPage.tsx  KeysPage.tsx  SettingsPage.tsx  TransfersPage.tsx
src/services/: api.ts  events.ts
src/stores/: lock.ts  profiles.ts  sessions.ts  toast.ts  transfers.ts  ui.ts  updates.ts
src/styles/: components.css  global.css
