[package]
name = "harbor-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Core domain, application and infrastructure for the Harbor SSH client"

[lib]
name = "harbor_core"
path = "src/lib.rs"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
time.workspace = true
zeroize.workspace = true
secrecy.workspace = true
async-trait.workspace = true
futures.workspace = true
bytes.workspace = true
base64.workspace = true
dirs.workspace = true

russh.workspace = true
russh-sftp.workspace = true
ssh-key.workspace = true

# Used only to match OpenSSH *hashed* known_hosts entries (HMAC-SHA1 over the
# hostname). We never implement crypto primitives ourselves.
hmac = "0.12"
sha1 = "0.10"

# OS keychain integration. Each platform uses its native backend. On Linux we
# use the *async* Secret Service backend, which talks D-Bus over pure-Rust zbus
# (no C libdbus dependency), keeping the build self-contained.
[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3.6", default-features = false, features = [
    "async-secret-service",
    "crypto-rust",
    "tokio",
] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3.6", default-features = false, features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3.6", default-features = false, features = ["windows-native"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full", "test-util"] }
# Deterministic CSPRNG (the same crate ssh-key uses) to generate throwaway key
# pairs at test time — so no private keys are ever committed to the repo.
chacha20 = { version = "0.10", features = ["rng"] }
